import grpc
from concurrent import futures
import time
import account_service_pb2_grpc
from account_service_pb2_grpc import AccountServiceServicer

class AccountService(AccountServiceServicer):
    def CreateAccount(self, request, context):
        # Implement your logic here
        pass

    def GetAccount(self, request, context):
        # Implement your logic here
        pass

    def UpdateAccount(self, request, context):
        # Implement your logic here
        pass

    def DeleteAccount(self, request, context):
        # Implement your logic here
        pass

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    account_service_pb2_grpc.add_AccountServiceServicer_to_server(AccountService(), server)
    
    # Load server certificate and key
    with open('server.crt', 'rb') as f:
        server_cert = f.read()
    with open('server.key', 'rb') as f:
        server_key = f.read()
    with open('ca.crt', 'rb') as f:
        ca_cert = f.read()

    # Configure server credentials
    server_credentials = grpc.ssl_server_credentials(
        [(server_key, server_cert)],
        root_certificates=ca_cert,
        require_client_auth=True
    )
    
    server.add_secure_port('[::]:50051', server_credentials)
    server.start()
    try:
        while True:
            time.sleep(86400)
    except KeyboardInterrupt:
        server.stop(0)

if __name__ == '__main__':
    serve()